--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.5.0",
     "prettier": "^2.6.2"
   }
 }
