--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "@webpack-cli/generators": "^2.4.2",
     "gh-pages": "^4.0.0",
     "prettier": "^2.6.2"
   }
