--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@webpack-cli/generators": "^2.4.2",
     "gh-pages": "^4.0.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "react-test-renderer": "^16.14.0"
   }
 }
